# paparmane

./: .gitignore  Dockerfile  Makefile  README.md  app.py  paparman-e6a9f007dfb9.json  profiles.json  pyproject.toml  users.json  uvicorn_entry.py
charts/: paparmane-0.1.0.tgz
charts/paparmane/: Chart.yaml  values.yaml
charts/paparmane/templates/: deployment.gotmpl  ingress.yaml.gotmpl  service.yaml.gotmpl
paparmane/: main.py  match.py  query.py
willy_gaby/: main.py  match.py  query.py  storage.py  tasks.py
